Fix alignment of elements on frontend

--- a/s6-working-with-events/index.css
+++ b/s6-working-with-events/index.css
@@ -99,7 +99,7 @@ a:hover::after {
 }
 
 .img-layout {
-    width: 50%;
+    width: 30%;
     height: auto;
 }
 
@@ -189,4 +189,71 @@ input {
     width: 500px;
     height: 300px;
     background-color: bisque;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.row {
+    display: flex;
+    width: 100%;
+    column-gap: 50px;
+    align-items: center;
+    justify-content: center;
+    margin: 20px auto;
+}
+
+.flex-column {
+    display: flex;
+    flex-direction: column;
+    row-gap: 10px;
+    align-items: center;
+    justify-content: center;
+    width: 100%;
+}
+
+#frameworks {
+    list-style-type: none;
+}
+
+#frameworks li {
+    margin: 10px auto;
+    line-height: 20px;
+}
+
+#control-buttons {
+    display: flex;
+    column-gap: 10px;
+}
+
+.footer {
+    display: flex;
+    row-gap: 5px;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    margin: 20px 0;
+}
+
+.icon-container {
+    display: flex;
+    column-gap: 20px;
+    width: 50%;
+    height: auto;
+    justify-content: center;
+    align-items: center;
+    padding: 10px;
+}
+
+.icons {
+    font-size: 2.5rem;
+}
+
+.icon-holder {
+    display: flex;
+    flex-direction: column;
+    flex-wrap: wrap;
+    justify-content: center;
+    align-items: center;
 }
